--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "type": "git"
   },
   "dependencies": {
+    "com.unity.inputsystem": "1.7.0",
+    "com.meta.xr.sdk.core": "71.0.0",
     "com.meta.xr.mrutilitykit": "77.0.0",
     "com.unity.cloud.draco": "5.1.8",
     "com.unity.cloud.gltfast": "6.13.1",
