--- a/Runtime/MultiSet.Core.asmdef
+++ b/Runtime/MultiSet.Core.asmdef
@@ -1,29 +1,30 @@
 {
-  "name": "MultiSet.Runtime",
-  "rootNamespace": "MultiSet",
-  "references": [
-    "Unity.XR.Management",
-    "Unity.XR.OpenXR",
-    "Unity.InputSystem",
-    "Meta.XR.MRUtilityKit",
-    "Meta.XR.SDK.Core",
-    "Unity.Cloud.Draco",
-    "Unity.Cloud.glTFast",
-    "Unity.XR.Oculus"
-  ],
-  "includePlatforms": [],
-  "excludePlatforms": [],
-  "allowUnsafeCode": false,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "autoReferenced": true,
-  "defineConstraints": [],
-  "versionDefines": [
-    {
-      "name": "com.unity.inputsystem",
-      "expression": "1.0.0",
-      "define": "ENABLE_INPUT_SYSTEM"
-    }
-  ],
-  "noEngineReferences": false
+    "name": "MultiSet.Runtime",
+    "rootNamespace": "MultiSet",
+    "references": [
+        "Unity.XR.Management",
+        "Unity.XR.OpenXR",
+        "Unity.InputSystem",
+        "Meta.XR.MRUtilityKit",
+        "Meta.XR.SDK.Core",
+        "Unity.Cloud.Draco",
+        "Unity.Cloud.glTFast",
+        "Unity.XR.Oculus",
+        "Oculus.VR"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.inputsystem",
+            "expression": "1.0.0",
+            "define": "ENABLE_INPUT_SYSTEM"
+        }
+    ],
+    "noEngineReferences": false
 }
