added navigation scene and related assets

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.multiset.sdk.quest",
-  "version": "1.0.1",
+  "version": "1.8.2",
   "displayName": "MultiSet Quest SDK",
   "description": "The MultiSet Quest SDK is a Unity-based development kit designed specifically for Meta Quest headsets. It provides developers with seamless integration to MultiSet's Visual Positioning System (VPS), enabling precise real-time localization, pose visualization, and camera access within virtual and mixed reality applications.",
   "unity": "6000.0",
@@ -19,19 +19,21 @@
     "type": "git"
   },
   "dependencies": {
-    "com.unity.inputsystem": "1.7.0",
-    "com.meta.xr.sdk.core": "71.0.0",
-    "com.meta.xr.mrutilitykit": "77.0.0",
+    "com.meta.xr.sdk.core": "78.0.0",
+    "com.meta.xr.mrutilitykit": "78.0.0",
+    "com.meta.xr.sdk.interaction.ovr": "78.0.0",
     "com.unity.cloud.draco": "5.1.8",
     "com.unity.cloud.gltfast": "6.13.1",
     "com.unity.xr.management": "4.5.1",
-    "com.unity.xr.openxr": "1.15.1"
+    "com.unity.xr.openxr": "1.15.1",
+    "com.unity.ai.navigation": "2.0.9",
+    "com.unity.inputsystem": "1.7.0"
   },
   "samples": [
     {
-      "displayName": "Single Frame Localization",
-      "description": "Complete sample scene demonstrating MultiSet Quest VPS localization",
-      "path": "Samples~/SingleFrameLocalization"
+      "displayName": "Sample Scenes",
+      "description": "Import SingleFrameLocalization and Navigation Scenes from MultiSet Quest SDK",
+      "path": "Samples~/Scenes"
     }
   ]
 }
