--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "com.unity.xr.management": "4.5.1",
     "com.unity.xr.openxr": "1.15.1",
     "com.unity.ai.navigation": "2.0.9",
-    "com.unity.inputsystem": "1.7.0"
+    "com.unity.inputsystem": "1.7.0",
+    "com.unity.textmeshpro": "3.0.6"
   },
   "samples": [
     {
